# mint-cookbook

./: .env.example  .gitignore  AGENTS.md  README.md
.codex/skill/benchmark-requirement-writer/: SKILL.md
.codex/skill/benchmark-requirement-writer/references/: repo-requirement-style.md
.codex/skill/helper-contract-alignment/: SKILL.md
.codex/skill/helper-contract-alignment/references/: alignment-rules.md  single-file-experiment-review-checklist.md
.codex/skill/helper-contract-alignment/scripts/: scan_helper_drift.py
.codex/skill/mint-api/: SKILL.md  mint_api_cheatsheet.md
.codex/skill/new-experiment/: SKILL.md
.codex/skill/new-experiment-plus/: SKILL.md
.codex/skill/new-experiment-plus/agents/: openai.yaml
.codex/skill/new-experiment-plus/references/: concurrency_layers.md  file_upgrade_map.md  upgrade_playbook.md
.codex/skill/paper-experiment-figures/references/: artifact-mapping.md
.codex/skill/project-harness-bootstrap/: SKILL.md
.codex/skill/project-harness-bootstrap/scripts/: bootstrap_harness.py
.codex/skill/project-harness-bootstrap/templates/: AGENTS.md.template  README.md.template
.codex/skill/project-harness-bootstrap/templates/experiments/: README.md.template
experiments/: README.md
experiments/chat-dpo/: AGENTS.md  README.md  autoresearch.md  autoresearch.sh  pyproject.toml  train.py
experiments/chat-dpo/data/: README.md  sources.yaml
experiments/chat-dpo/data/eval/: full.jsonl
experiments/chat-dpo/data/train/: full.jsonl
experiments/chat-dpo/tests/: test_train.py
experiments/dapo-aime/: AGENTS.md  README.md  autoresearch.md  autoresearch.sh  cache-env.sh  pyproject.toml  train.py
experiments/dapo-aime/data/: README.md  download_and_prepare.py  sources.yaml
experiments/dapo-aime/data/eval/: aime2024.jsonl  aime2025.jsonl  aime2026.jsonl  smoke.jsonl
experiments/dapo-aime/data/train/: smoke.jsonl
experiments/dapo-aime/tests/: test_train.py
experiments/dapo-aime24/: README.md  autoresearch.ideas.md  autoresearch.md  autoresearch.sh  cache-env.sh  pyproject.toml  train.py
experiments/dapo-aime24/data/: README.md  download_and_prepare.py  sources.yaml
experiments/dapo-aime24/tests/: test_train.py
experiments/fingpt/: AGENTS.md  README.md  autoresearch.md  autoresearch.sh  pyproject.toml  train.py
experiments/fingpt/data/: README.md  download_fingpt_fineval.py  download_fingpt_sentiment.py  download_fingpt_sentiment_benchmarks.py  make_sentiment_train_eval_subset.py  sources.yaml
experiments/fingpt/tests/: test_train.py
experiments/lawbench/: AGENTS.md  README.md  autoresearch.md  autoresearch.sh  pyproject.toml  train.py
experiments/lawbench/data/: README.md  sources.yaml
experiments/lawbench/data/eval/: build_eval_manifest.py  build_train_eval_manifest.py  download_eval_raw.py
experiments/lawbench/data/train/: build_train_manifest.py  download_train_raw.py
experiments/lawbench/tests/: repro_mint_duplicate_prompt_error.py  test_train.py
requirements/aime-on-mint/: README.md
requirements/chat-dpo-on-mint/: README.md
requirements/fingpt-on-mint/: README.md
requirements/finqa-on-mint/: README.md
requirements/lawbench-on-mint/: README.md
scaffolds/: README.md  lifecycle.md
scaffolds/profiles/: dpo.md  eval.md  grpo.md  sft.md
scaffolds/single_file_experiment/: README.md  README.md.tpl  autoresearch.md.tpl  autoresearch.sh.tpl  capability_matrix.md  env.tpl  naming.md  pyproject.toml.tpl  train.py.tpl
scaffolds/single_file_experiment/data/: sources.yaml.tpl
skills/: README.md
skills/benchmark-requirement-writer/: SKILL.md
skills/benchmark-requirement-writer/agents/: openai.yaml
skills/benchmark-requirement-writer/references/: algorithm-routing.md  repo-requirement-style.md
skills/helper-contract-alignment/: SKILL.md
skills/helper-contract-alignment/agents/: openai.yaml
skills/helper-contract-alignment/references/: alignment-rules.md  single-file-experiment-review-checklist.md
skills/mint-api/: SKILL.md  mint_api_cheatsheet.md
skills/mint-api/agents/: openai.yaml
skills/new-experiment/: SKILL.md
skills/new-experiment-plus/: SKILL.md
skills/new-experiment-plus/references/: file_upgrade_map.md  logging.md  upgrade_playbook.md
skills/new-experiment/agents/: openai.yaml
skills/paper-experiment-figures/: SKILL.md
skills/paper-experiment-figures/agents/: openai.yaml
skills/paper-experiment-figures/references/: figure-recipes.md
skills/project-harness-bootstrap/: SKILL.md
skills/project-harness-bootstrap/agents/: openai.yaml
skills/project-harness-bootstrap/references/: harness-principles.md
skills/project-harness-bootstrap/templates/: .env.example.template  .gitignore.template  AGENTS.md.template  README.md.template
skills/project-harness-bootstrap/templates/experiments/: README.md.template
tests/: .gitignore  README.md  async_smoke.py  checkpoint_resume_smoke.py  common.py  loss_smoke.py  pyproject.toml  run_all.sh  sync_smoke.py  test_harness_bootstrap.py  test_path_metadata.py  test_release_export.py  test_repo_docs.py  test_scaffold_template.py
tests/wip/: repro_nonfinite_logprob.py
