[project]
name = "mint-cookbook-verification-tests"
version = "0.1.0"
description = "Repo-level verification tests: local contract coverage plus live MinT smoke scripts"
requires-python = ">=3.11"
dependencies = [
    "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git",
    "tinker==0.15.0",
    "torch>=2.2",
    "transformers>=4.50",
]

[tool.uv]
package = false
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
index-strategy = "first-index"
python-downloads = "automatic"
