[project]
name = "dapo-aime24"
version = "0.1.0"
description = "Self-contained direct GRPO baseline from DAPO-Math-17k to AIME 2024 on MinT"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git",
    "tinker==0.15.0",
    "transformers>=4.50",
]

[tool.uv]
package = false
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
index-strategy = "first-index"
python-downloads = "never"
