[project]
name = "lawbench"
version = "0.1.0"
description = "Eval-first LawBench SFT scaffold on MinT"
requires-python = ">=3.11"
dependencies = [
    "cn2an>=0.5.23",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git",
    "nltk>=3.9",
    "numpy>=1.26",
    "opencc-python-reimplemented>=0.1.7",
    "pypinyin>=0.55.0",
    "python-Levenshtein>=0.27.0",
    "rouge-chinese>=1.0.3",
    "six>=1.17",
    "tinker==0.15.0",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.66",
    "transformers>=4.50",
]

[tool.uv]
package = false
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
index-strategy = "first-index"
python-downloads = "never"
